# gcp_weather_api_pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
.cloudfunction/: pull_from_api.py
code/: pull_from_api.py  requirements.txt
