[project]
name = "gcp-weather-api-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
gcp-library = [
    "cloud-sql-python-connector>=1.16.0",
    "functions-framework>=3.8.2",
    "google-cloud-pubsub>=2.28.0",
]
other-library = [
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.37",
]
